remove tag properties from pom.xml